Fixed calendar overflow

--- a/app/static/css/scss/base.scss
+++ b/app/static/css/scss/base.scss
@@ -488,7 +488,6 @@ html, body {
 		min-width: 14%;
 		border-right: 2px solid black;
 		border-bottom: 2px solid black;
-		max-height: 88vh;
 		min-height: 55vh;
 		height: auto;
 		
